# unisa-uniadelaide-payslip-extractor

./: .gitignore  README.md  extract_payslip.py  pyproject.toml
