[project]
name = "payslip"
version = "0.1.0"
description = "extract details from payslip"
authors = [
    {name = "hwang@causalminds.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
